@@ -27,6 +27,7 @@ struct md_http_t {
     apr_off_t resp_limit;
     md_http_impl_t *impl;
     const char *user_agent;
+    const char *proxy_url;
 };
 
 static md_http_impl_t *cur_impl;
@@ -42,7 +43,8 @@ void md_http_use_implementation(md_http_impl_t *impl)
 
 static long next_req_id;
 
-apr_status_t md_http_create(md_http_t **phttp, apr_pool_t *p, const char *user_agent)
+apr_status_t md_http_create(md_http_t **phttp, apr_pool_t *p, const char *user_agent,
+                            const char *proxy_url)
 {
     md_http_t *http;
     apr_status_t rv = APR_SUCCESS;
@@ -65,6 +67,7 @@ apr_status_t md_http_create(md_http_t **phttp, apr_pool_t *p, const char *user_a
     http->pool = p;
     http->impl = cur_impl;
     http->user_agent = apr_pstrdup(p, user_agent);
+    http->proxy_url = proxy_url? apr_pstrdup(p, proxy_url) : NULL;
     http->bucket_alloc = apr_bucket_alloc_create(p);
     if (!http->bucket_alloc) {
         return APR_EGENERAL;
@@ -103,6 +106,7 @@ static apr_status_t req_create(md_http_request_t **preq, md_http_t *http,
     req->cb = cb;
     req->baton = baton;
     req->user_agent = http->user_agent;
+    req->proxy_url = http->proxy_url;
 
     *preq = req;
     return rv;
